<resources>
    <string name="app_name">MyGenshinCharacter</string>

    <string name="char_name">Nama Karakter</string>
    <string name="description">Deskripsi</string>
    <string name="about">About</string>
    <string name="weapon">Senjata</string>
    <string name="vision">Vision</string>
    <string name="association">Asosiasi</string>

    <string name="person">Achmad Zidan Ramdani</string>
    <string name="email">zidanramdani2211@gmail.com</string>

    <string-array name="data_name">
        <item>Hutao</item>
        <item>Ganyu</item>
        <item>Keqing</item>
        <item>Tartaglia</item>
        <item>Shenhe</item>
        <item>Sangonomiya Kokomi</item>
        <item>Yelan</item>
        <item>Kaedehara Kazuha</item>
        <item>Nahida</item>
        <item>Nilou</item>
        <item>Kamisato Ayaka</item>
        <item>Navia</item>
    </string-array>

    <string-array name="data_description">
        <item>Master ke-77 Wangsheng Funeral Parlor. Dia mengambil alih bisnis ini di umur yang cukup muda.</item>
        <item>Seorang sekretaris di Yuehai Pavilion. Darah hewan pusaka Qilin mengalir di dalam tubuhnya.</item>
        <item>Yuheng dari Liyue Qixing, dia punya banyak hal yang ingin dikatakan mengenai Rex Lapis yang memerintah Liyue- dan pada kenyataannya, para Dewa mengagumi orang-orang sepertinya.</item>
        <item>Anggota ke-11 dari Eleven Harbingers, juga dikenal dengan nama "Childe". Ketenaran namanya saja dapat menghantar ketakutan di medan perang.</item>
        <item>Seorang murid Adeptus dengan temperamen yang sedikit unik. Karena sudah lama hidup terisolasi di pegunungan Liyue, sifatnya juga menjadi acuh tak acuh dan menjaga jarak seperti para Adeptus.</item>
        <item>Sang Pemimpin Suci di Pulau Watatsumi. Segala urusan yang terjadi di pulau tersebut ada dalam genggaman nona muda ini.</item>
        <item>Orang misterius yang mengaku bekerja di Bagian Urusan Sipil, tetapi "tidak terdaftar" di data Bagian Urusan Sipil.</item>
        <item>Seorang samurai pengembara dari Inazuma yang saat ini bergabung bersama dengan armada Crux Fleet Liyue. Di dalam jiwanya yang lembut dan riang, terdapat hati yang menyembunyikan banyak beban.</item>
        <item>Seorang gadis yang dikurung bak burung di dalam sangkar Sanctuary of Surasthana, hanya bisa melihat dunia dari dalam mimpi.</item>
        <item>Penari terkenal di Teater Zubayr. Tariannya elegan dan gemulai, pembawaannya ramah dan polos.</item>
        <item>Putri dari Klan Kamisato di Yashiro Commission. Bermartabat dan elegan, cerdas dan tangguh.</item>
        <item>Ketua Spina di Rosula, bos yang cantik, baik, dan bertanggung jawab.</item>
    </string-array>

    <string-array name="data_photo">
        <item>@drawable/hutao</item>
        <item>@drawable/ganyu</item>
        <item>@drawable/keqing</item>
        <item>@drawable/tartaglia</item>
        <item>@drawable/shenhe</item>
        <item>@drawable/sangonomiya_kokomi</item>
        <item>@drawable/yelan</item>
        <item>@drawable/kaedehara_kazuha</item>
        <item>@drawable/nahida</item>
        <item>@drawable/nilou</item>
        <item>@drawable/kamisato_ayaka</item>
        <item>@drawable/navia</item>
    </string-array>

    <string-array name="data_vision">
        <item>Pyro</item>
        <item>Cryo</item>
        <item>Electro</item>
        <item>Hydro</item>
        <item>Cryo</item>
        <item>Hydro</item>
        <item>Hydro</item>
        <item>Anemo</item>
        <item>Dendro</item>
        <item>Hydro</item>
        <item>Cryo</item>
        <item>Geo</item>
    </string-array>

    <string-array name="data_weapon">
        <item>Polearm</item>
        <item>Bow</item>
        <item>Sword</item>
        <item>Bow</item>
        <item>Polearm</item>
        <item>Catalyst</item>
        <item>Bow</item>
        <item>Sword</item>
        <item>Catalyst</item>
        <item>Sword</item>
        <item>Sword</item>
        <item>Claymore</item>
    </string-array>

    <string-array name="data_association">
        <item>Liyue</item>
        <item>Liyue</item>
        <item>Liyue</item>
        <item>Fatui</item>
        <item>Liyue</item>
        <item>Inazuma</item>
        <item>Liyue</item>
        <item>Inazuma</item>
        <item>Sumeru</item>
        <item>Sumeru</item>
        <item>Inazuma</item>
        <item>Fontaine</item>
    </string-array>

</resources>